# pathlab

./: .gitignore  README.rst  pathlab.py  setup.cfg
docs/: api.rst  basics.rst  conf.py  extending.rst  implementation.rst  index.rst  requirements.txt
docs/_templates/: layout.html
examples/: zippath.py
pathlab/: __init__.py  iso.py  rt.py  tar.py  zip.py
pathlab/core/: accessor.py  creator.py  fileinfile.py  path.py  stat.py
tests/: test_common.py
