[metadata]
name = pathlab
version = 0.1
author = Barney Gale
author-email = barney.gale@gmail.com
home-page = https://github.com/barneygale/pathlab
description = An object-oriented path interface to archives, images, remote filesystems, etc
long-description = file: README.rst
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    pathlab
    pathlab.core
python_requires = >= 3.6
setup_requires =
    setuptools>=38.3.0
install_requires =
    pycdlib
    requests

[bdist_wheel]
universal = true
